Support for SOLR 5.5.0